--- a/local/templates/main/components/bitrix/subscribe.form/subscribe-footer/style.css
+++ b/local/templates/main/components/bitrix/subscribe.form/subscribe-footer/style.css
@@ -1,16 +1,41 @@
-.subscribe-form {
+.subscribe-form {  
+  background-color: var(--color-beige);
+  border-top: 1.5px solid var(--color-black);
+  border-bottom: 1.5px solid var(--color-black);
+  position: relative;
+}
+
+.subscribe-form::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  top: 0;
+  right: 0;
+  height: 100%;
   background-image: url('img/back-desc.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 5.73vw 2vw 4.69vw 2vw;
+  border-left: 1.5px solid var(--color-black);
+}
+
+.subscribe-form .container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.subscribe-form__left {
+  padding: 43px 0;
+}
+
+.subscribe-form__right {
+  
 }
 
 .subscribe-form form {
   text-align: center;
-  margin: 0.93vw auto 0 auto;
-  display: flex;
-  justify-content: center;
+  margin: 0.78vw auto 0 auto;
+  display: flex;  
   flex-wrap: wrap;
 }
 
@@ -23,46 +48,41 @@
 }
 
 .input__error {
-  display: none;
-  width: 56.59vw;
+  display: none;  
   text-align: left;
-  margin-top: 7px;
-  color: #FF8888;
-  font-size: 0.73vw;  
+  margin-top: 6px;
+  color: var(--color-red);
+  font-size: 0.6vw;  
   font-weight: 500;
-  line-height: 120%;
-  white-space: pre;
+  line-height: 120%;  
 }
 
-.subscribe-foem__title {
-  text-align: center;
-  width: 57vw;
-  font-size: 2.29vw;
+.subscribe-form__title {  
+  font-size: 1.4vw;
   font-weight: 600;
   text-transform: uppercase;
   font-family: 'TT Travels Next';
   margin: 0 auto;
-  color: var(--color-white);
+  color: var(--color-black);
 }
 
 .subscribe-form__subtitle {
-  margin: 0.93vw 0 0 0;
+  margin: 0.57vw 0 0 0;
   font-family: 'TT Travels Next';
-  font-size: 0.93vw;
-  color: var(--color-white);
+  font-size: 0.6vw;
+  color: var(--color-black);
   font-weight: 500;
-  line-height: normal;
-  text-align: center;
+  line-height: normal;  
 }
 
 .subscribe__input {
-  width: 44.8vw;
-  padding: 0.78vw 0.625vw;
-  font-size: 0.89vw;  
+  width: 27vw;
+  padding: 0.5vw 0.5vw;
+  font-size: 0.6vw;  
   font-weight: 500;
-  line-height: 147.815%;
+  line-height: 142%;
   border: none;
-  height: 3.02vw;
+  height: 1.8vw;
 }
 
 .subscribe__input.error {
@@ -74,22 +94,22 @@
 }
 
 .subscribe__submit {
-  height: 3.02vw;
-  padding: 0.78vw 2vw;
-  font-size: 0.77vw;
-  color: var(--color-white);
+  height: 1.8vw;
+  padding: 0.52vw 0.52vw;
+  font-size: 0.6vw;
+  color: var(--color-black);
   font-weight: 700;
-  line-height: 169.883%;
+  line-height: 143%;
   text-transform: uppercase;
   background-color: var(--color-orange);
-  border: none
+  border: none;
+  border-radius: 2px;
 }
 
 .subscribe-form__agree {
-  margin-top: 10px;
-  font-size: 0.9375vw;
-  text-align: center;
-  color: var(--color-white);
+  margin-top: 6px;
+  font-size: 0.6vw;  
+  color: var(--color-black);
   font-weight: 500;
   line-height: normal;
 }
@@ -113,9 +133,83 @@
   max-width: 404px;
 }
 
-@media (max-width: 767px) {
-  .subscribe-foem__title {
-    width: auto;
+@media (max-width: 1200px) {
+  .subscribe-form__title {    
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: left;
+    max-width: 400px;
+    margin: 0;
+  }
+
+  .subscribe-form__subtitle {
+    margin-top: 9px;
+    font-size: 11px;
+    max-width: 350px;
+  }
+
+  .subscribe-form form {
+    margin-top: 15px;    
+    justify-content: flex-start;
+  }
+
+  .subscribe__input {
+    height: 40px;
+    width: 305px;
+    padding: 8px 12px;
+    font-size: 13px;
+    line-height: initial;
+  }
+
+  .subscribe__submit {
+    font-size: 7px;
+    line-height: 9px;
+    font-weight: bold;    
+    width: 85px;    
+    padding: 11px 0;
+    height: 40px;    
+  }
+
+  .input__error {
+    width: 100%;
+    margin-top: 6px;
+    font-size: 9px;
+    line-height: normal;
+    white-space: normal;
+  }
+
+  .subscribe-form__agree {
+    text-align: left;
+    font-size: 9px;
+    line-height: normal;
+  }
+
+  #subscribe_result .modal__container {
+    min-height: unset;
+  }
+
+  #subscribe_result {
+    z-index: 9999;
+  }
+
+  .subscribe-form::before {
+    width: 33%;
+    background-image: url('img/back-tab.jpg');
+  }
+
+  .subscribe-form .container {
+    grid-template-columns: 67% 33%;
+  }
+
+  .subscribe-form__left {
+    padding: 30px 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .subscribe-form__title {    
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
@@ -173,11 +267,23 @@
   #subscribe_result {
     z-index: 9999;
   }
-}
 
-@media (max-width: 450px) {
+  .subscribe-form::before {
+    display: none;    
+  }
+
   .subscribe-form {
     background-image: url('img/back-mob.jpg');
-    padding: 28px 20px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .subscribe-form .container {
+    display: block;
+  }
+
+  .subscribe-form__left {
+    padding: 30px 0;
   }
 }
