100869 | Слияние разработок addamant

--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -167,8 +167,8 @@ h1.page_title {
     width: 100%;
 }
 .object-row .area-info div {
-    /*overflow: hidden;*/
-    /*-o-text-overflow: ellipsis;*/
-    /*text-overflow: ellipsis;*/
-    /*white-space: nowrap;*/
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
