--- a/local/templates/main/assets/css/content.css
+++ b/local/templates/main/assets/css/content.css
@@ -1,1 +1,245 @@
-.sidebar-navigation{border-top:.1rem solid #000;border-top:.1rem solid var(--color-black);position:relative}.sidebar-navigation.sidebar-navigation_show .list{-webkit-animation:fadeIn .25s forwards;animation:fadeIn .25s forwards;display:block}.sidebar-navigation__label{border-bottom:.1rem solid #000;border-bottom:.1rem solid var(--color-black);border-top:.1rem solid #000;border-top:.1rem solid var(--color-black);cursor:pointer;display:none;font-family:TT Travels Next;font-family:var(--header-text-font-family);font-weight:700;line-height:1.6rem;padding-bottom:1.6rem;padding-top:1.6rem}.sidebar-navigation__label span{background:url(../img/dropdown.svg) no-repeat 100% 50%/1.6rem 1.7rem;display:inline-block;padding-right:2.5rem;vertical-align:top}.sidebar-navigation .list__item{border-bottom:.1rem solid #000;border-bottom:.1rem solid var(--color-black)}.sidebar-navigation .list__item_exit{border-bottom:none;margin-top:1.6rem}.sidebar-navigation .list__link{font-family:TT Travels Next;font-family:var(--header-text-font-family);font-weight:500;line-height:2rem;padding:1.5rem 0}.sidebar-navigation .list__link:hover{color:#696969;color:var(--color-dark-grey-2)}.section_content{margin-top:2.8rem}.content{-webkit-box-pack:justify;-ms-flex-pack:justify;display:-webkit-box;display:-ms-flexbox;display:flex;justify-content:space-between}.content>*{min-height:1px;min-width:1px}.content__sidebar{-webkit-box-flex:0;-ms-flex:none;flex:none;width:25.566%}.content__sidebar .button{margin-top:3.2rem;width:100%}.content__article{-webkit-box-flex:1;-ms-flex:1;flex:1;max-width:74rem;padding-left:4rem}.content__article h1{line-height:1;margin-bottom:2.4rem}.content__article h6{font-size:1.3rem;font-weight:700;margin-bottom:1.6rem}.content__article *+h6{margin-top:2.4rem}.content__article p{margin-bottom:2.4rem}.content__article p:last-child{margin-bottom:0}.content__article-links{margin-top:12.4rem}.content__article-links-label{font-family:TT Travels Next;font-family:var(--header-text-font-family);font-weight:700;margin-bottom:1.2rem}.content__article-links ul{list-style:none}.content__article-links ul li{display:block;font-family:TT Travels Next;font-family:var(--header-text-font-family);font-weight:500}.content__article-links ul li+li{margin-top:1.2rem}@media (min-width:1024px){.sidebar-navigation .list__item_active .list__link{font-weight:700;letter-spacing:-.01em}}@media (max-width:1023px){.sidebar-navigation{border:none}.sidebar-navigation__label{display:block}.sidebar-navigation .list{-ms-overflow-style:none;background-color:#fbeed7;background-color:var(--color-beige-light);border-radius:.2rem;-webkit-box-shadow:0 .8rem 2.2rem rgba(0,0,0,.15);box-shadow:0 .8rem 2.2rem rgba(0,0,0,.15);-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow);display:none;left:0;max-height:19rem;opacity:0;overflow-y:auto;padding:.5rem 0;position:absolute;scrollbar-width:none;top:100%;width:100%;z-index:9}.sidebar-navigation .list::-webkit-scrollbar{display:none;height:0;width:0}.sidebar-navigation .list__item{border:none}.sidebar-navigation .list__item_active .list__link{background-color:#e6c48e;background-color:var(--color-beige)}.sidebar-navigation .list__item_exit{display:none}.sidebar-navigation .list__link{font-size:1rem;font-weight:600;letter-spacing:.02em;padding:1rem 1.6rem;-webkit-transition:background-color .25s;-o-transition:background-color .25s;transition:background-color .25s}.sidebar-navigation .list__link:hover{background-color:#e6c48e;background-color:var(--color-beige);color:#000;color:var(--color-black)}.section_content{margin-top:0}.content{display:block}.content__sidebar{margin-bottom:3.2rem;margin-top:.8rem;width:100%}.content__sidebar .button{margin-top:2.4rem;max-width:35.6rem}.content__article{max-width:none;padding-left:0}.content__article-links{margin-top:3.2rem}}
+.sidebar-navigation {
+    border-top: .1rem solid #000;
+    border-top: .1rem solid var(--color-black);
+    position: relative
+}
+
+.sidebar-navigation.sidebar-navigation_show .list {
+    -webkit-animation: fadeIn .25s forwards;
+    animation: fadeIn .25s forwards;
+    display: block
+}
+
+.sidebar-navigation__label {
+    border-bottom: .1rem solid #000;
+    border-bottom: .1rem solid var(--color-black);
+    border-top: .1rem solid #000;
+    border-top: .1rem solid var(--color-black);
+    cursor: pointer;
+    display: none;
+    font-family: TT Travels Next;
+    font-family: var(--header-text-font-family);
+    font-weight: 700;
+    line-height: 1.6rem;
+    padding-bottom: 1.6rem;
+    padding-top: 1.6rem
+}
+
+.sidebar-navigation__label span {
+    background: url(../img/dropdown.svg) no-repeat 100% 50%/1.6rem 1.7rem;
+    display: inline-block;
+    padding-right: 2.5rem;
+    vertical-align: top
+}
+
+.sidebar-navigation .list__item {
+    border-bottom: .1rem solid #000;
+    border-bottom: .1rem solid var(--color-black)
+}
+
+.sidebar-navigation .list__item_exit {
+    border-bottom: none;
+    margin-top: 1.6rem
+}
+
+.sidebar-navigation .list__link {
+    font-family: TT Travels Next;
+    font-family: var(--header-text-font-family);
+    font-weight: 500;
+    line-height: 2rem;
+    padding: 1.5rem 0
+}
+
+.sidebar-navigation .list__link:hover {
+    color: #696969;
+    color: var(--color-dark-grey-2)
+}
+
+.section_content {
+    margin-top: 2.8rem
+}
+
+.content {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: space-between
+}
+
+.content > * {
+    min-height: 1px;
+    min-width: 1px
+}
+
+.content__sidebar {
+    -webkit-box-flex: 0;
+    -ms-flex: none;
+    flex: none;
+    width: 25.566%
+}
+
+.content__sidebar .button {
+    margin-top: 3.2rem;
+    width: 100%
+}
+
+.content__article {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    max-width: 74rem;
+    padding-left: 4rem
+}
+
+.content__article h1 {
+    line-height: 1;
+    margin-bottom: 2.4rem
+}
+
+.content__article h6 {
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 1.6rem
+}
+
+.content__article * + h6 {
+    margin-top: 2.4rem
+}
+
+.content__article p {
+    margin-bottom: 2.4rem
+}
+
+.content__article p:last-child {
+    margin-bottom: 0
+}
+
+.content__article-links {
+    margin-top: 12.4rem
+}
+
+.content__article-links-label {
+    font-family: TT Travels Next;
+    font-family: var(--header-text-font-family);
+    font-weight: 700;
+    margin-bottom: 1.2rem
+}
+
+.content__article-links ul {
+    list-style: none
+}
+
+.content__article-links ul li {
+    display: block;
+    font-family: TT Travels Next;
+    font-family: var(--header-text-font-family);
+    font-weight: 500
+}
+
+.content__article-links ul li + li {
+    margin-top: 1.2rem
+}
+
+@media (min-width: 1024px) {
+    .sidebar-navigation .list__item_active .list__link {
+        font-weight: 700;
+        letter-spacing: -.01em
+    }
+}
+
+@media (max-width: 1023px) {
+    .sidebar-navigation {
+        border: none
+    }
+
+    .sidebar-navigation__label {
+        display: block
+    }
+
+    .sidebar-navigation .list {
+        -ms-overflow-style: none;
+        background-color: #fbeed7;
+        background-color: var(--color-beige-light);
+        border-radius: .2rem;
+        -webkit-box-shadow: 0 .8rem 2.2rem rgba(0, 0, 0, .15);
+        box-shadow: 0 .8rem 2.2rem rgba(0, 0, 0, .15);
+        -webkit-box-shadow: var(--shadow);
+        box-shadow: var(--shadow);
+        display: none;
+        left: 0;
+        max-height: 19rem;
+        opacity: 0;
+        overflow-y: auto;
+        padding: .5rem 0;
+        position: absolute;
+        scrollbar-width: none;
+        top: 100%;
+        width: 100%;
+        z-index: 9
+    }
+
+    .sidebar-navigation .list::-webkit-scrollbar {
+        display: none;
+        height: 0;
+        width: 0
+    }
+
+    .sidebar-navigation .list__item {
+        border: none
+    }
+
+    .sidebar-navigation .list__item_active .list__link {
+        background-color: #e6c48e;
+        background-color: var(--color-beige)
+    }
+
+    .sidebar-navigation .list__item_exit {
+        display: none
+    }
+
+    .sidebar-navigation .list__link {
+        font-size: 1rem;
+        font-weight: 600;
+        letter-spacing: .02em;
+        padding: 1rem 1.6rem;
+        -webkit-transition: background-color .25s;
+        transition: background-color .25s
+    }
+
+    .sidebar-navigation .list__link:hover {
+        background-color: #e6c48e;
+        background-color: var(--color-beige);
+        color: #000;
+        color: var(--color-black)
+    }
+
+    .section_content {
+        margin-top: 0
+    }
+
+    .content {
+        display: block
+    }
+
+    .content__sidebar {
+        margin-bottom: 3.2rem;
+        margin-top: .8rem;
+        width: 100%
+    }
+
+    .content__sidebar .button {
+        margin-top: 2.4rem;
+        max-width: 35.6rem
+    }
+
+    .content__article {
+        max-width: none;
+        padding-left: 0
+    }
+
+    .content__article-links {
+        margin-top: 3.2rem
+    }
+}
