--- a/local/templates/main/assets/css/index.css
+++ b/local/templates/main/assets/css/index.css
@@ -14,87 +14,6 @@
     width: 1.6rem
 }
 
-.score {
-    -webkit-box-flex: 0;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    cursor: default;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex: none;
-    flex: none;
-    position: relative
-}
-
-.score > * {
-    min-height: 1px;
-    min-width: 1px
-}
-
-.score:hover .score__dropdown {
-    -webkit-animation: fadeIn .25s forwards;
-    animation: fadeIn .25s forwards;
-    display: block
-}
-
-.score img {
-    display: block;
-    margin-right: .5rem
-}
-
-.score img, .score span {
-    -webkit-box-flex: 0;
-    -ms-flex: none;
-    flex: none
-}
-
-.score span {
-    font-family: TT Travels Next;
-    font-family: var(--header-text-font-family);
-    font-weight: 700;
-    letter-spacing: -.01em;
-    line-height: 1.6rem
-}
-
-.score__dropdown {
-    background-color: #fbeed7;
-    background-color: var(--color-beige-light);
-    border-radius: .4rem;
-    -webkit-box-shadow: 0 .8rem 2.2rem rgba(0, 0, 0, .15);
-    box-shadow: 0 .8rem 2.2rem rgba(0, 0, 0, .15);
-    -webkit-box-shadow: var(--shadow);
-    box-shadow: var(--shadow);
-    display: none;
-    left: 50%;
-    margin-top: 1rem;
-    max-width: 100vw;
-    opacity: 0;
-    padding: 2.6rem 3.6rem 3rem 2.6rem;
-    position: absolute;
-    top: 100%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    width: 50rem;
-    z-index: 1
-}
-
-.score__dropdown .list_score {
-    display: block;
-    height: auto
-}
-
-.score__dropdown .list_score .list__item {
-    margin-top: 0;
-    padding-right: 0
-}
-
-.score__dropdown .list_score .list__item + .list__item {
-    margin-top: 1.6rem
-}
-
 .area-info {
     -webkit-box-align: start;
     -ms-flex-align: start;
@@ -177,7 +96,6 @@
     top: 50%;
     -webkit-transition: -webkit-transform .25s;
     transition: -webkit-transform .25s;
-    -o-transition: transform .25s;
     transition: transform .25s;
     transition: transform .25s, -webkit-transform .25s;
     width: 1.6rem
@@ -233,8 +151,6 @@
 }
 
 .objects__more a {
-    font-family: TT Travels Next;
-    font-family: var(--header-text-font-family);
     font-weight: 500
 }
 
@@ -256,6 +172,21 @@
 .object__images {
     margin-bottom: .8rem;
     position: relative
+}
+
+.object__images .swiper-slide {
+    padding-bottom: 60%;
+    position: relative
+}
+
+.object__images .swiper-slide img {
+    height: 100%;
+    left: 0;
+    -o-object-fit: cover;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    width: 100%
 }
 
 .object .favorite {
@@ -343,7 +274,6 @@
 
 .object .area-info div {
     overflow: hidden;
-    -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     white-space: nowrap
 }
@@ -385,6 +315,14 @@
 
 .object-row__images .slider-gallery {
     height: 100%
+}
+
+.object-row__images .slider-gallery img {
+    display: block;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%
 }
 
 .object-row .favorite {
@@ -456,7 +394,6 @@
     margin-top: .3rem;
     padding: 0;
     -webkit-transition: color .25s;
-    -o-transition: color .25s;
     transition: color .25s;
     vertical-align: top
 }
@@ -660,7 +597,6 @@
     background-image: url(../img/dropdown.svg);
     -webkit-transition: -webkit-transform .25s;
     transition: -webkit-transform .25s;
-    -o-transition: transform .25s;
     transition: transform .25s;
     transition: transform .25s, -webkit-transform .25s
 }
@@ -783,7 +719,6 @@
     border-radius: 50%;
     position: relative;
     -webkit-transition: background-color .25s;
-    -o-transition: background-color .25s;
     transition: background-color .25s
 }
 
@@ -838,7 +773,6 @@
     display: flex;
     justify-content: center;
     -webkit-transition: background-color .25s;
-    -o-transition: background-color .25s;
     transition: background-color .25s
 }
 
@@ -970,7 +904,6 @@
     display: block;
     padding: 0 2rem;
     -webkit-transition: color .25s;
-    -o-transition: color .25s;
     transition: color .25s
 }
 
@@ -1279,6 +1212,10 @@
     width: 0
 }
 
+.autocomplete-dropdown__message {
+    padding: 0 1.6rem
+}
+
 .autocomplete-dropdown__item + .autocomplete-dropdown__item {
     margin-top: 1rem
 }
@@ -1297,11 +1234,9 @@
 
 .autocomplete-dropdown .list__item {
     cursor: pointer;
-    font-size: 1rem;
     font-weight: 600;
     padding: 1rem 1.6rem;
     -webkit-transition: background-color .25s;
-    -o-transition: background-color .25s;
     transition: background-color .25s
 }
 
@@ -1422,7 +1357,6 @@
     transform: scale(20);
     -webkit-transition: opacity .5s .25s, -webkit-transform .5s .25s;
     transition: opacity .5s .25s, -webkit-transform .5s .25s;
-    -o-transition: transform .5s .25s, opacity .5s .25s;
     transition: transform .5s .25s, opacity .5s .25s;
     transition: transform .5s .25s, opacity .5s .25s, -webkit-transform .5s .25s;
     width: 2.2rem
@@ -1500,9 +1434,7 @@
     display: flex;
     font-family: TT Travels Next;
     font-family: var(--header-text-font-family);
-    font-size: 1.775525vw;
     justify-content: space-between;
-    line-height: 4.8rem;
     margin-top: 4rem;
     text-transform: uppercase
 }
@@ -1651,9 +1583,26 @@
     min-width: 1px
 }
 
-.news-preview__more:hover {
+.news-preview__more:hover, .objects__more a {
     color: #f18d3f;
     color: var(--color-orange)
+}
+
+.objects__more a {
+    border: none;
+    font-family: TT Travels Next;
+    font-family: var(--header-text-font-family);
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 2.1rem;
+    text-decoration: none
+}
+
+@media (min-width: 1140px) {
+    .hero__footnote {
+        font-size: 2.8rem;
+        line-height: 4.8rem
+    }
 }
 
 @media (min-width: 1280px) {
@@ -1831,31 +1780,14 @@
         right: 59.4rem;
         right: calc(var(--container-gap) + 55.4rem)
     }
+
+    .hero__footnote {
+        font-size: 2.45614vw;
+        line-height: 4.210526vw
+    }
 }
 
 @media (max-width: 1023px) {
-    .score__dropdown {
-        padding: 2.6rem;
-        width: 34.3rem
-    }
-
-    .score__dropdown .list_score {
-        display: block;
-        height: auto;
-        margin-left: 0;
-        margin-top: 0
-    }
-
-    .score__dropdown .list_score .list__item {
-        margin-top: 0;
-        padding-left: 0;
-        width: 100%
-    }
-
-    .score__dropdown .list_score .list__item + .list__item {
-        margin-top: .8rem
-    }
-
     .objects__heading {
         border-bottom: none;
         display: inline-block;
@@ -1884,7 +1816,6 @@
         position: absolute;
         top: calc(100% - .2rem);
         -webkit-transition: visibility .25s, opacity .25s;
-        -o-transition: visibility .25s, opacity .25s;
         transition: visibility .25s, opacity .25s;
         visibility: hidden;
         width: 100%;
@@ -1947,7 +1878,6 @@
         padding-bottom: .7rem;
         padding-top: .7rem;
         -webkit-transition: max-height .25s;
-        -o-transition: max-height .25s;
         transition: max-height .25s
     }
 
@@ -1995,7 +1925,6 @@
         top: 50%;
         -webkit-transition: -webkit-transform .25s;
         transition: -webkit-transform .25s;
-        -o-transition: transform .25s;
         transition: transform .25s;
         transition: transform .25s, -webkit-transform .25s;
         width: 1.6rem
@@ -2056,7 +1985,8 @@
     }
 
     .hero__footnote {
-        font-size: 2.6vw;
+        font-size: 2.604166vw;
+        line-height: 6.25vw;
         margin-top: 3.8rem
     }
 
@@ -2110,6 +2040,21 @@
     .object-row:not(.object-row_profile) .object-row__images {
         height: auto;
         width: 100%
+    }
+
+    .object-row:not(.object-row_profile) .object-row__images .slider-gallery {
+        height: auto
+    }
+
+    .object-row:not(.object-row_profile) .object-row__images .slider-gallery .swiper-slide {
+        padding-bottom: 68%;
+        position: relative
+    }
+
+    .object-row:not(.object-row_profile) .object-row__images .slider-gallery .swiper-slide img {
+        left: 0;
+        position: absolute;
+        top: 0
     }
 
     .object-row:not(.object-row_profile) .object-row__content {
@@ -2275,8 +2220,8 @@
     }
 
     .hero__footnote {
-        font-size: 3.4vw;
-        line-height: 2.4rem;
+        font-size: 3.2vw;
+        line-height: 6.9vw;
         margin-top: 2rem
     }
 
