--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -1432,11 +1432,15 @@
 }
 
 .catalog__count {
-    font-family: TT Travels Next;
-    font-family: var(--header-text-font-family);
-    font-weight: 700;
-    letter-spacing: -.01em;
+    /*font-family: TT Travels Next;*/
+    /*font-family: var(--header-text-font-family);*/
+    font-weight: 500;
+    /*letter-spacing: -.01em;*/
     margin-bottom: 1.8rem
+}
+.catalog__count--not-found{
+    padding: 10px 20px;
+    background-color: #E2C189;
 }
 
 .catalog__more {
