--- a/local/templates/main/assets/css/custom.css
+++ b/local/templates/main/assets/css/custom.css
@@ -37,6 +37,9 @@
 #form-catalog-filter-front  .guests__dropdown{
     z-index: 10;
     width: auto;
+    max-height: 350px;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 @media screen and (max-width: 768px) {
 
