--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -3666,7 +3666,7 @@ img.lazy.loaded {
 
 .modal_filters .modal__container {
   border-radius: 0;
-  height: 100%;
+  /*height: 100%;*/
   max-width: none;
   padding: 0;
   -webkit-transform: none;
