--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -1460,14 +1460,16 @@
     /*font-family: var(--header-text-font-family);*/
     font-weight: 500;
     /*letter-spacing: -.01em;*/
-    margin-bottom: 2rem
+    margin-bottom: 2rem;
 }
 
 .catalog__count {
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 4rem;
     padding-bottom: 2rem;
     font-size: 1.8rem;
+    border-bottom: 0.1rem solid #000;
+    border-bottom: 0.1rem solid var(--color-black);
 }
 
 .same_items-header,
