--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -502,11 +502,12 @@
 .object-row__features span {
     -webkit-box-flex: 0;
     display: flex;
-    align-items: center;
+    align-items: baseline;
     -ms-flex: none;
     flex: none;
-    margin: .4rem 0 0 .8rem;
-    max-width: calc(100% - .8rem)
+    margin: .1rem;
+    max-width: calc(100% - .8rem);
+    height: fit-content;
 }
 
 .object-row__features span:before {
@@ -516,6 +517,7 @@
     align-items: center;
     color: var(--color-orange);
     font-size: 25px;
+    align-self: center;
 }
 
 .object-row__order {
@@ -1863,9 +1865,6 @@
     justify-content: flex-start;
 }
 
-.form__group .field__input {
-    border-color: var(--color-beige);
-}
 
 .guests__dropdown {
     z-index: 10;
