--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -106,7 +106,7 @@ h1.page_title {
         top: 27rem;
     }
     .catalog__map.catalog__on_map {
-        top: 19rem;
+        top: 39rem;
     }
     .section_crumbs {
         top: 6rem;
@@ -128,6 +128,9 @@ h1.page_title {
         font-size: 3rem;
         line-height: 4.2rem;
         letter-spacing: .04em;
+    }
+    .catalog__map.catalog__on_map {
+        top: 33rem;
     }
 }
 .section.section_form .clip {
@@ -168,4 +171,5 @@ h1.page_title {
     /*-o-text-overflow: ellipsis;*/
     /*text-overflow: ellipsis;*/
     /*white-space: nowrap;*/
+
 }
